--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,10 @@
 language: node_js
 node_js:
   - "7.8"
+git:
+  submodules: false
+
+before_install:
+  - git submodule update --init --remote --recursive
+
 
