--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "WebAssembly/spec"]
 	path = WebAssembly/spec
-	url = git@github.com:WebAssembly/spec.git
+	url = https://github.com/WebAssembly/spec.git
