--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language: node_js
 node_js:
   - "7.8"
-
 os:
   - osx
-
 git:
   submodules: false
-
 before_install:
-  - brew install ocaml ocamlbuild
   - git submodule update --init --remote --recursive
+env:
+  - TEST_SUITE=units
+  - TEST_SUITE=integration
+script: "npm run test:$TEST_SUITE"
 
