--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Alternative syntax for WebAssembly text format",
   "main": "index.js",
   "scripts": {
-    "test": "./walt_tests.sh"
+    "test": "node jasmine.js || true",
+    "integration": "./integration.sh",
+    "test:units": "node jasmine.js",
+    "test:integration": "./integration.sh"
   },
   "repository": {
     "type": "git",
@@ -20,7 +23,10 @@
     "url": "https://github.com/ballercat/walt/issues"
   },
   "homepage": "https://github.com/ballercat/walt#readme",
-  "dependencies": {
-    "esprima": "^3.1.3"
+  "dependencies": {},
+  "devDependencies": {
+    "jasmine": "^2.6.0",
+    "jasmine-spec-reporter": "^4.1.0",
+    "snap-shot": "^2.17.0"
   }
 }
