--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "homepage": "https://github.com/ballercat/walt#readme",
   "dependencies": {
-    "ramda": "^0.23.0"
+    "ramda": "^0.23.0",
+    "wasm-types": "1.0.1"
   },
   "devDependencies": {
     "ava": "^0.19.1",
