--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/ballercat/walt#readme",
   "dependencies": {
+    "invariant": "^2.2.2",
     "ramda": "^0.23.0",
     "wasm-types": "1.0.1"
   },
