emit imports, implement ULEB128 encoding

--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,10 @@
   },
 
   "parserOptions": {
-    "sourceType": "module"
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "experimentalObjectRestSpread": true
+    }
   },
 
   "rules": {
