--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
   "dependencies": {
     "invariant": "^2.2.2",
     "ramda": "^0.23.0",
-    "wasm-types": "1.0.1"
+    "wasm-types": "1.0.2"
   },
   "devDependencies": {
     "ava": "^0.19.1",
     "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.5.2",
     "babel-preset-es2015": "^6.24.1",
@@ -39,8 +40,8 @@
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-eslint": "^3.0.0",
     "rollup-plugin-uglify": "^2.0.1",
-    "uglify-es": "^3.0.17",
-    "snap-shot": "^2.17.0"
+    "snap-shot": "^2.17.0",
+    "uglify-es": "^3.0.17"
   },
   "ava": {
     "files": [
