--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "node_modules/ava/cli.js",
     "test:units": "npm test",
     "debug": "node --inspect-brk node_modules/ava/profile.js",
-    "build": "node_modules/rollup/bin/rollup -c rollup.config.js && cp -r ./dist/walt.js ./docs/dist/"
+    "build": "node_modules/rollup/bin/rollup -c rollup.config.js"
   },
   "repository": {
     "type": "git",
