--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,4 @@
-baseUrl: "/walt"
+name: Walt Explorer
+description: Explore Walt Syntax for WebAssembly
+url: https://ballercat.github.io
+baseUrl: /walt
