--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,10 @@
     "WebAssembly": true
   },
 
+  "parser": "babel-eslint",
+  "plugins": [
+    "flowtype"
+  ],
   "parserOptions": {
     "sourceType": "module",
     "ecmaFeatures": {
