Function pointers, Types, Table, string literals
Implement #3

--- a/package.json
+++ b/package.json
@@ -50,10 +50,10 @@
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-eslint": "^3.0.0",
+    "rollup-plugin-flow": "^1.1.1",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-replace": "^1.1.1",
     "rollup-plugin-uglify": "^2.0.1",
-    "snap-shot": "^2.17.0",
     "uglify-es": "^3.0.17"
   },
   "ava": {
