--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/ballercat/walt#readme",
   "dependencies": {
+    "chalk": "^2.1.0",
     "curry": "^1.2.0",
     "invariant": "^2.2.2",
     "ramda": "^0.23.0",
@@ -51,6 +52,7 @@
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-eslint": "^3.0.0",
     "rollup-plugin-flow": "^1.1.1",
+    "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-replace": "^1.1.1",
     "rollup-plugin-uglify": "^2.0.1",
