--- a/docs/package.json
+++ b/docs/package.json
@@ -50,14 +50,18 @@
     "react-hot-loader": "^1.3.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.8.2"
   },
   "dependencies": {
     "codemirror": "^5.29.0",
+    "prop-types": "^15.5.10",
     "ramda": "^0.24.1",
     "react": "^15.6.1",
     "react-codemirror": "^1.0.0",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "semantic-ui-css": "^2.2.12",
+    "semantic-ui-react": "^0.73.1"
   }
 }
