--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "wasm-types": "1.0.2"
   },
   "devDependencies": {
-    "ava": "^0.19.1",
+    "ava": "^0.22.0",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^7.2.3",
     "babel-plugin-external-helpers": "^6.22.0",
@@ -48,6 +48,7 @@
     "eslint-plugin-flowtype": "^2.35.1",
     "flow-bin": "^0.54.0",
     "nyc": "^11.1.0",
+    "prettier": "^1.7.0",
     "rollup": "^0.43.0",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-commonjs": "^8.0.2",
