codemirror2 because v1 is sad, better examples

--- a/docs/package.json
+++ b/docs/package.json
@@ -59,7 +59,7 @@
     "prop-types": "^15.5.10",
     "ramda": "^0.24.1",
     "react": "^15.6.1",
-    "react-codemirror": "^1.0.0",
+    "react-codemirror2": "^2.0.2",
     "react-dom": "^15.6.1",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.73.1"
