--- a/docs/package.json
+++ b/docs/package.json
@@ -47,6 +47,7 @@
     "css-loader": "^0.28.7",
     "file-loader": "^0.11.2",
     "node-sass": "^4.5.3",
+    "raw-loader": "^0.5.1",
     "react-hot-loader": "^1.3.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
