--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: node_js
 node_js:
   - "8.0"
+before_script: "npm run validate"
 script: "npm test"
 after_success:
   - "npm run coverage"
