--- a/.eslintrc
+++ b/.eslintrc
@@ -24,7 +24,7 @@
   "rules": {
     ////////// Possible Errors //////////
 
-    "no-comma-dangle": 0,         // disallow trailing commas in object literals
+    "comma-dangle": 1,         // disallow trailing commas in object literals
     "no-cond-assign": 0,          // disallow assignment in conditional expressions
     "no-console": 1,              // disallow use of console (off by default in the node environment)
     "no-constant-condition": 0,   // disallow use of constant expressions in conditions
@@ -39,7 +39,7 @@
     "no-extra-semi": 0,           // disallow unnecessary semicolons
     "no-func-assign": 0,          // disallow overwriting functions written as function declarations
     "no-inner-declarations": 0,   // disallow function or variable declarations in nested blocks
-    "no-invalid-regexp": 0,       // disallow invalid regular expression strings in the RegExp constructor
+    "no-invalid-regexp": 1,       // disallow invalid regular expression strings in the RegExp constructor
     "no-irregular-whitespace": 0, // disallow irregular whitespace outside of strings and comments
     "no-negated-in-lhs": 0,       // disallow negation of the left operand of an in expression
     "no-obj-calls": 0,            // disallow the use of object properties of the global object (Math and JSON) as functions
@@ -57,7 +57,7 @@
     "block-scoped-var": 0,      // treat var statements as if they were block scoped (off by default)
     "complexity": 0,            // specify the maximum cyclomatic complexity allowed in a program (off by default)
     "consistent-return": 0,     // require return statements to either always or never specify values
-    "curly": 0,                 // specify curly brace conventions for all control statements
+    "curly": 1,                 // specify curly brace conventions for all control statements
     "default-case": 0,          // require default case in switch statements (off by default)
     "dot-notation": 0,          // encourages use of dot notation whenever possible
     "eqeqeq": 0,                // require the use of === and !==
@@ -65,10 +65,10 @@
     "no-alert": 0,              // disallow the use of alert, confirm, and prompt
     "no-caller": 0,             // disallow use of arguments.caller or arguments.callee
     "no-div-regex": 0,          // disallow division operators explicitly at beginning of regular expression (off by default)
-    "no-else-return": 0,        // disallow else after a return in an if (off by default)
+    "no-else-return": 1,        // disallow else after a return in an if (off by default)
     "no-empty-label": 0,        // disallow use of labels for anything other then loops and switches
     "no-eq-null": 0,            // disallow comparisons to null without a type-checking operator (off by default)
-    "no-eval": 0,               // disallow use of eval()
+    "no-eval": 2,               // disallow use of eval()
     "no-extend-native": 0,      // disallow adding to native types
     "no-extra-bind": 0,         // disallow unnecessary function binding
     "no-fallthrough": 0,        // disallow fallthrough of case statements
@@ -96,7 +96,7 @@
     "no-unused-expressions": 1, // disallow usage of expressions in statement position
     "no-void": 0,               // disallow use of void operator (off by default)
     "no-warning-comments": 0,   // disallow usage of configurable warning terms in comments, e.g. TODO or FIXME (off by default)
-    "no-with": 0,               // disallow use of the with statement
+    "no-with": 2,               // disallow use of the with statement
     "radix": 0,                 // require use of the second argument for parseInt() (off by default)
     "vars-on-top": 0,           // requires to declare all vars on top of their containing scope (off by default)
     "wrap-iife": 0,             // require immediate function invocation to be wrapped in parentheses (off by default)
@@ -119,7 +119,7 @@
     "no-shadow-restricted-names": 0,  // disallow shadowing of names such as arguments
     "no-undef": 1,                    // disallow use of undeclared variables unless mentioned in a /*global */ block
     "no-undef-init": 0,               // disallow use of undefined when initializing variables
-    "no-undefined": 0,                // disallow use of undefined variable (off by default)
+    "no-undefined": 2,                // disallow use of undefined variable (off by default)
     "no-unused-vars": 1,              // disallow declaration of variables that are not used in the code
     "no-use-before-define": 1,        // disallow use of variables before they are defined
 
@@ -137,7 +137,7 @@
 
     ////////// Stylistic Issues //////////
 
-    "brace-style": 0,               // enforce one true brace style (off by default)
+    "brace-style": 1,               // enforce one true brace style (off by default)
     "camelcase": 1,                 // require camel case names
     "comma-spacing": 0,             // enforce spacing before and after comma
     "comma-style": 1,               // enforce one true comma style (off by default)
@@ -151,10 +151,10 @@
     "new-parens": 1,                // disallow the omission of parentheses when invoking a constructor with no arguments
     "no-array-constructor": 1,      // disallow use of the Array constructor
     "no-inline-comments": 1,        // disallow comments inline after code (off by default)
-    "no-lonely-if": 0,              // disallow if as the only statement in an else block (off by default)
-    "no-mixed-spaces-and-tabs": 0,  // disallow mixed spaces and tabs for indentation
+    "no-lonely-if": 1,              // disallow if as the only statement in an else block (off by default)
+    "no-mixed-spaces-and-tabs": 2,  // disallow mixed spaces and tabs for indentation
     "no-multiple-empty-lines": 0,   // disallow multiple empty lines (off by default)
-    "no-nested-ternary": 0,         // disallow nested ternary expressions (off by default)
+    "no-nested-ternary": 1,         // disallow nested ternary expressions (off by default)
     "no-new-object": 0,             // disallow use of the Object constructor
     "no-space-before-semi": 0,      // disallow space before semicolon
     "no-spaced-func": 0,            // disallow space between function identifier and application
@@ -183,7 +183,7 @@
 
     ////////// ECMAScript 6 //////////
 
-    "no-var": 0,          // require let or const instead of var (off by default)
+    "no-var": 1,          // require let or const instead of var (off by default)
     "generator-star": 0,  // enforce the position of the * in generator functions (off by default)
 
 
