--- a/.eslintrc
+++ b/.eslintrc
@@ -33,23 +33,27 @@
     ////////// Flow //////////
 
     "flowtype/boolean-style": [
-      0,
+      1,
       "boolean"
     ],
     "flowtype/define-flow-type": 0,
     "flowtype/delimiter-dangle": [
-      0,
+      1,
       "never"
     ],
     "flowtype/generic-spacing": [
-      0,
+      1,
       "never"
     ],
-    "flowtype/no-primitive-constructor-types": 0,
-    "flowtype/no-types-missing-file-annotation": 0,
-    "flowtype/no-weak-types": 0,
+    "flowtype/no-primitive-constructor-types": 2,
+    "flowtype/no-types-missing-file-annotation": 2,
+    "flowtype/no-weak-types": [2, {
+      "any": false,
+      "Function": true,
+      "Object": true
+    }],
     "flowtype/object-type-delimiter": [
-      0,
+      2,
       "comma"
     ],
     "flowtype/require-parameter-type": 0,
@@ -62,11 +66,11 @@
     ],
     "flowtype/require-valid-file-annotation": 0,
     "flowtype/semi": [
-      0,
+      2,
       "always"
     ],
     "flowtype/space-after-type-colon": [
-      0,
+      2,
       "always"
     ],
     "flowtype/space-before-generic-bracket": [
@@ -82,7 +86,7 @@
       "^([A-Z][a-z0-9]+)+Type$"
     ],
     "flowtype/union-intersection-spacing": [
-      0,
+      1,
       "always"
     ],
     "flowtype/use-flow-type": 0,
