Code Review stuff, still a lot of flow errors

--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "Alternative syntax for WebAssembly text format",
   "main": "index.js",
   "scripts": {
-    "test": "npm run lint && npm run flow && npm run ava",
-    "ava": "nyc ava",
-    "validate": "npm run lint",
+    "test": "nyc ava",
+    "validate": "npm run lint && npm run flow",
     "tdd": "ava",
-    "coverage": "npm test && nyc report --reporter=text-lcov | coveralls",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "debug": "node --inspect-brk node_modules/ava/profile.js",
     "build": "node_modules/rollup/bin/rollup -c rollup.config.js && cp dist/walt.js docs/dist/",
     "flow": "flow",
