--- a/.eslintrc
+++ b/.eslintrc
@@ -28,12 +28,18 @@
     }
   },
 
+  "overrides": [
+    {
+      "files": "src/**/*[sS]pec.js",
+      "settings": {
+        "flowtype": {
+          "onlyFilesWithFlowAnnotation": true
+        }
+      }
+    }
+  ],
 
   "rules": {
-    ////////// Flow //////////
-
-
-
     ////////// Flow //////////
 
     "flowtype/boolean-style": [
@@ -102,6 +108,7 @@
     ],
     "flowtype/use-flow-type": 0,
 
+
     ////////// Possible Errors //////////
 
     "comma-dangle": [             // disallow trailing commas in object literals
@@ -110,7 +117,10 @@
     ],
     "no-cond-assign": 2,          // disallow assignment in conditional expressions
     "no-console": 1,              // disallow use of console (off by default in the node environment)
-    "no-constant-condition": 1,   // disallow use of constant expressions in conditions
+    "no-constant-condition": [   // disallow use of constant expressions in conditions
+      2,
+      { "checkLoops": false }
+    ],
     "no-control-regex": 1,        // disallow control characters in regular expressions
     "no-debugger": 2,             // disallow use of debugger
     "no-dupe-keys": 2,            // disallow duplicate keys when creating object literals
@@ -130,7 +140,7 @@
     "no-sparse-arrays": 2,        // disallow sparse arrays
     "no-unreachable": 2,          // disallow unreachable statements after a return, throw, continue, or break statement
     "use-isnan": 2,               // disallow comparisons with the value NaN
-    "valid-jsdoc": 1,             // Ensure JSDoc comments are valid (off by default)
+    "valid-jsdoc": 0,             // Ensure JSDoc comments are valid (off by default)
     "valid-typeof": 2,            // Ensure that the results of typeof are compared against a valid string
 
 
@@ -182,7 +192,7 @@
     "no-void": 0,               // disallow use of void operator (off by default)
     "no-warning-comments": 1,   // disallow usage of configurable warning terms in comments, e.g. TODO or FIXME (off by default)
     "no-with": 2,               // disallow use of the with statement
-    "radix": 1,                 // require use of the second argument for parseInt() (off by default)
+    "radix": 0,                 // require use of the second argument for parseInt() (off by default)
     "vars-on-top": 0,           // requires to declare all vars on top of their containing scope (off by default)
     "wrap-iife": 0,             // require immediate function invocation to be wrapped in parentheses (off by default)
     "yoda": 2,                  // require or disallow Yoda conditions
@@ -205,7 +215,7 @@
     "no-undef": 2,                    // disallow use of undeclared variables unless mentioned in a /*global */ block
     "no-undef-init": 0,               // disallow use of undefined when initializing variables
     "no-undefined": 2,                // disallow use of undefined variable (off by default)
-    "no-unused-vars": 1,              // disallow declaration of variables that are not used in the code
+    "no-unused-vars": 2,              // disallow declaration of variables that are not used in the code
     "no-use-before-define": 2,        // disallow use of variables before they are defined
 
 
@@ -274,7 +284,10 @@
     "quotes": 2,                    // specify whether double or single quotes should be used
     "semi": 2,                      // require or disallow use of semicolons instead of ASI
     "sort-vars": 0,                 // sort variables within the same declaration block (off by default)
-    "space-before-function-paren": 2,// require a space after function names (off by default)
+    "space-before-function-paren": [// require a space after function names (off by default)
+      2,
+      "never"
+    ],
     "space-before-blocks": 0,       // require or disallow space before blocks (off by default)
     "space-in-parens": 2,           // require or disallow spaces inside parentheses (off by default)
     "space-infix-ops": 1,           // require spaces around operators
