--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: node_js
 node_js:
   - "8"
-  - latest
+  - "node"
+before_script: "npm run validate"
 script: "npm test"
 after_success:
   - "npm run coverage"
