Consistent code formatting using prettier

--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "Alternative syntax for WebAssembly text format",
   "main": "index.js",
   "scripts": {
-    "validate": "npm run lint",
+    "validate": "npm run lint && npm run prettier",
     "test": "nyc ava",
     "tdd": "ava",
     "coverage": "npm test && nyc report --reporter=text-lcov | coveralls",
     "debug": "node --inspect-brk node_modules/ava/profile.js",
     "build": "node_modules/rollup/bin/rollup -c rollup.config.js && cp dist/walt.js docs/dist/",
     "flow": "flow",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "prettier": "prettier --list-different src/**/*.js",
+    "precommit": "lint-staged"
   },
   "repository": {
     "type": "git",
@@ -49,8 +51,10 @@
     "coveralls": "^2.13.1",
     "eslint-plugin-flowtype": "^2.35.1",
     "flow-bin": "^0.54.0",
+    "husky": "^0.14.3",
+    "lint-staged": "^6.0.0",
     "nyc": "^11.1.0",
-    "prettier": "^1.7.0",
+    "prettier": "^1.9.2",
     "rollup": "^0.43.0",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-commonjs": "^8.0.2",
@@ -79,5 +83,11 @@
       "babel-register"
     ],
     "babel": "inherit"
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
