--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "scripts": {
     "validate": "npm run lint",
-    "test": "nyc ava",
-    "tdd": "ava",
-    "coverage": "npm test && nyc report --reporter=text-lcov | coveralls",
+    "test": "jest --coverage",
+    "tdd": "jest --watch",
+    "coverage": "npm test && cat ./coverage/lcov.info | coveralls",
     "debug": "node --inspect-brk node_modules/ava/profile.js",
-    "build": "node_modules/rollup/bin/rollup -c rollup.config.js && cp dist/walt.js docs/dist/",
+    "build":
+      "node_modules/rollup/bin/rollup -c rollup.config.js && cp dist/walt.js docs/dist/",
     "flow": "flow",
     "lint": "eslint src"
   },
@@ -17,10 +18,7 @@
     "type": "git",
     "url": "git+https://github.com/ballercat/walt.git"
   },
-  "keywords": [
-    "wasm",
-    "wast"
-  ],
+  "keywords": ["wasm", "wast"],
   "author": "Arthur Buldauskas",
   "license": "MIT",
   "bugs": {
@@ -36,7 +34,6 @@
     "wasm-types": "1.0.2"
   },
   "devDependencies": {
-    "ava": "^0.22.0",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^7.2.3",
     "babel-plugin-external-helpers": "^6.22.0",
@@ -49,7 +46,8 @@
     "coveralls": "^2.13.1",
     "eslint-plugin-flowtype": "^2.35.1",
     "flow-bin": "^0.54.0",
-    "nyc": "^11.1.0",
+    "jest": "^22.0.3",
+    "jest-cli": "^22.0.3",
     "prettier": "^1.7.0",
     "rollup": "^0.43.0",
     "rollup-plugin-babel": "^2.7.1",
@@ -61,23 +59,5 @@
     "rollup-plugin-replace": "^1.1.1",
     "rollup-plugin-uglify": "^2.0.1",
     "uglify-es": "^3.0.17"
-  },
-  "ava": {
-    "files": [
-      "src/**/*[sS]pec.js",
-      "!**/utils.js"
-    ],
-    "source": [
-      "src/**/*.js"
-    ],
-    "concurrency": 10,
-    "failFast": true,
-    "failWithoutAssertions": false,
-    "tap": false,
-    "powerAssert": false,
-    "require": [
-      "babel-register"
-    ],
-    "babel": "inherit"
   }
 }
