ignore dist/ in lints

--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "babel": "inherit"
   },
   "lint-staged": {
-    "*.js": [
+    "src/**/*.js": [
       "prettier --write",
       "git add"
     ]
