--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Walt packages",
   "main": "index.js",
   "scripts": {
+    "install": "lerna bootstrap --stream",
     "validate": "lerna run validate --stream",
     "test": "lerna run test --stream"
   },
