--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
   - "lts/*"
 install:
-  - npm intall
+  - npm install
   - npm run postinstall
 before_script: "npm run validate"
 script: "npm test"
