--- a/packages/walt-docs/package.json
+++ b/packages/walt-docs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "walt-docs",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "WAlt documentation",
   "main": "index.js",
   "scripts": {
@@ -55,7 +55,6 @@
     "webpack-dev-server": "2.8.2"
   },
   "dependencies": {
-    "walt": "^0.2.0",
     "codemirror": "5.29.0",
     "prop-types": "15.5.10",
     "ramda": "0.25.0",
@@ -63,6 +62,7 @@
     "react-codemirror2": "2.0.2",
     "react-dom": "15.6.1",
     "semantic-ui-css": "2.2.12",
-    "semantic-ui-react": "0.73.1"
+    "semantic-ui-react": "0.73.1",
+    "walt": "^0.2.2"
   }
 }
