no publish on docs

--- a/packages/walt-docs/package.json
+++ b/packages/walt-docs/package.json
@@ -7,6 +7,7 @@
     "start": "webpack-dev-server -d --hot --inline",
     "build": "webpack && cp index.html explorer.js explorer.js.map walt.png ../../docs/"
   },
+  "private": true,
   "babel": {
     "presets": [
       "react",
