--- a/packages/webpack-walt-examples/package.json
+++ b/packages/webpack-walt-examples/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-walt-examples",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Examples with Webpack",
   "main": "index.js",
   "scripts": {
@@ -41,17 +41,17 @@
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-preset-env": "1.6.0",
     "babel-preset-react": "6.24.1",
-    "webpack": "3.6.0",
-    "webpack-dev-server": "2.8.2",
-    "walt-compiler": "^0.2.4",
-    "walt-loader": "1.0.0",
     "css-loader": "0.28.7",
     "file-loader": "0.11.2",
     "node-sass": "4.5.3",
     "react-hot-loader": "1.3.1",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
-    "url-loader": "0.5.9"
+    "url-loader": "0.5.9",
+    "walt-compiler": "^0.2.4",
+    "walt-loader": "^1.0.1",
+    "webpack": "3.6.0",
+    "webpack-dev-server": "2.8.2"
   },
   "dependencies": {
     "prop-types": "15.5.10",
