fix a few things, function pointers still broken

--- a/packages/walt-compiler/.eslintrc
+++ b/packages/walt-compiler/.eslintrc
@@ -215,7 +215,8 @@
     "no-undef": 2,                    // disallow use of undeclared variables unless mentioned in a /*global */ block
     "no-undef-init": 0,               // disallow use of undefined when initializing variables
     "no-undefined": 2,                // disallow use of undefined variable (off by default)
-    "no-unused-vars": 2,              // disallow declaration of variables that are not used in the code
+    "no-unused-vars": ["error",       // disallow declaration of variables that are not used in the code
+    { "argsIgnorePattern": "^_" }],
     "no-use-before-define": 2,        // disallow use of variables before they are defined
 
 
