--- a/packages/walt-compiler/package.json
+++ b/packages/walt-compiler/package.json
@@ -9,7 +9,7 @@
     "tdd": "ava",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "debug": "node --inspect-brk node_modules/ava/profile.js",
-    "build": "node_modules/rollup/bin/rollup -c rollup.config.js",
+    "build": "cross-env node_modules/rollup/bin/rollup -c rollup.config.js",
     "flow": "flow",
     "lint": "eslint src",
     "prettier": "prettier --list-different src/**/*.js",
@@ -47,6 +47,7 @@
     "babel-preset-env": "1.6.0",
     "babel-preset-flow": "6.23.0",
     "coveralls": "3.0.0",
+    "cross-env": "5.1.3",
     "eslint-plugin-flowtype": "2.40.1",
     "flow-bin": "0.61.0",
     "husky": "0.14.3",
