--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,17 @@ node_js:
 install:
   - npm install
   - npm run postinstall
-before_script: "npm run validate"
-script: "npm test"
+script: "npm run $TEST_SUITE"
 after_success:
   - "npm run coverage"
+env:
+  - TEST_SUITE=validate
+  - TEST_SUITE=test
 cache:
   directories:
     - node_modules
+    - packages/walt-loader/node_modules
+    - packages/webpack-walt-examples/node_modules
     - packages/walt-compiler/node_modules
     - packages/walt-docs/node_modules
 
