start tweaking unit test reports

--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
   "homepage": "https://github.com/ballercat/walt#readme",
   "dependencies": {
     "lerna": "2.5.1"
+  },
+  "nyc": {
+    "cache": true
   }
 }
