--- a/packages/walt-compiler/package.json
+++ b/packages/walt-compiler/package.json
@@ -4,7 +4,7 @@
   "description": "Alternative syntax for WebAssembly text format",
   "main": "dist/walt.js",
   "scripts": {
-    "test": "nyc ava --no-color --no-power-assert --tap | tap-nyc",
+    "test": "nyc --cache ava --no-color --no-power-assert --tap | tap-nyc",
     "validate": "npm run prettier && npm run lint && npm run flow",
     "tdd": "ava",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
@@ -94,6 +94,10 @@
     ]
   },
   "nyc": {
-    "cache": true
+    "cache": true,
+    "exclude": [
+      "src/**/print-node.js",
+      "src/**/__tests__/*.js"
+    ]
   }
 }
