Data section, strings poc, self hosted tests poc...

--- a/packages/walt-compiler/package.json
+++ b/packages/walt-compiler/package.json
@@ -76,7 +76,8 @@
       "!**/utils.js"
     ],
     "source": [
-      "src/**/*.js"
+      "src/**/*.js",
+      "src/**/*.walt"
     ],
     "failFast": true,
     "failWithoutAssertions": false,
