--- a/packages/walt-compiler/.eslintrc
+++ b/packages/walt-compiler/.eslintrc
@@ -134,8 +134,11 @@
     "no-undef": 2,                    // disallow use of undeclared variables unless mentioned in a /*global */ block
     "no-undef-init": 0,               // disallow use of undefined when initializing variables
     "no-undefined": 2,                // disallow use of undefined variable (off by default)
-    "no-unused-vars": [1,             // disallow declaration of variables that are not used in the code
-    { "argsIgnorePattern": "^_" }],
+    "no-unused-vars": [2,             // disallow declaration of variables that are not used in the code
+      {
+        "argsIgnorePattern": "^_",
+        "ignoreRestSiblings": true
+      }],
     "no-use-before-define": 2,        // disallow use of variables before they are defined
 
 
