--- a/packages/walt-link/package.json
+++ b/packages/walt-link/package.json
@@ -7,7 +7,6 @@
     "test": "nyc --cache ava --no-color --no-power-assert",
     "validate": "npm run prettier && npm run lint",
     "tdd": "ava",
-    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "debug": "node --inspect-brk node_modules/ava/profile.js",
     "lint": "eslint src",
     "prettier": "prettier --list-different src/**/*.js"
@@ -21,6 +20,8 @@
   "license": "MIT",
   "devDependencies": {
     "ava": "^0.25.0",
+    "coveralls": "^3.0.0",
+    "nyc": "^11.7.1",
     "prettier": "^1.12.0",
     "walt-compiler": "^0.4.3"
   },
