--- a/packages/walt-compiler/package.json
+++ b/packages/walt-compiler/package.json
@@ -99,7 +99,8 @@
     "cache": true,
     "exclude": [
       "src/**/print-node.js",
-      "src/**/__tests__/*.js"
+      "src/**/__tests__/*.js",
+      "dist/*.js"
     ]
   }
 }
