--- a/packages/walt-cli/package.json
+++ b/packages/walt-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "walt-cli",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "CLI for Walt",
   "main": "index.js",
   "scripts": {
@@ -18,7 +18,8 @@
   "license": "MIT",
   "dependencies": {
     "meow": "^4.0.0",
-    "walt-compiler": "^0.4.3"
+    "walt-compiler": "^0.4.3",
+    "walt-link": "^0.1.0"
   },
   "devDependencies": {
     "prettier": "^1.11.1"
