Add 'export type' syntax support
- Types must be exported before use
- Add warning to linker if they are not
- Syntax is still valid if not used in another module
- Fix a typo in filename passed in linker validation
-

--- a/packages/walt-link/package.json
+++ b/packages/walt-link/package.json
@@ -41,5 +41,8 @@
     "failWithoutAssertions": false,
     "tap": false,
     "powerAssert": false
+  },
+  "dependencies": {
+    "invariant": "^2.2.4"
   }
 }
