Implement module linker (#113)
* implement basic linking

* move static encoding to generator phase

* Remove debug code, add comments

* somehow tests broke :O

* Begin refactoring import logic

* Implement build ASTs pass

Parse all imports without compiling and collect
all syntax trees in one place.

* Implement global static merging

Iterate over all asts and combine statics into a
global statics object.

* Add a build step

* Implement data section sharing

Correctly build cross-module data sections. This also
fixes cases when a non-memory/data module is imported
as part of the program

* Omit memory from a test module

Cover that memory can is not required in a module even if
the rest of the program may use it

* update readme

* inferred types from imports

* update snapshots

* remove useless resolve

* update specs

* recurse when building tree

* Cleanup and simplify

* some more tests

* fix a regression

* fix CI

* fix ci v2

* yet another ci fix

* try again

* travis debugging

* delete snapshots

* filepaths in snapshots. ouch

* remove snapshot

* punt on snapshots for now

* Remove object spread from link. oops

* link a test

* travis back to normal

* fix a native spec

* expand to type imports

* allow for type imports as well

- Something is wrong with validation. Off for now in linker

* make .walt extension optional

- DX + 1,000,000

* seems like dist is inside coverage

* Fix type inference for arity > 1

- Add DI compiler to the linker for diagnostics/debugging
- Fix type inference where an imported method has arity > 1
- Add validation spec to cover un-patched type inferences

* Add basic CI

- Fix a bug in error generator
- Add basic compiling of .wasm files to cli

* Setup a basic cli

- Output .wasm files
- JS Wrapping to happen later

* Add 'export type' syntax support

- Types must be exported before use
- Add warning to linker

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,5 @@ cache:
     - packages/webpack-walt-examples/node_modules
     - packages/walt-compiler/node_modules
     - packages/walt-docs/node_modules
+    - packages/walt-link/node_modules
 
