--- a/packages/walt-link/package.json
+++ b/packages/walt-link/package.json
@@ -22,9 +22,6 @@
     "prettier": "^1.12.0",
     "walt-compiler": "^0.5.0"
   },
-  "peerDependencies": {
-    "walt-compiler:": "^0.4.3"
-  },
   "prettier": {
     "trailingComma": "es5"
   },
@@ -43,6 +40,7 @@
     "powerAssert": false
   },
   "dependencies": {
-    "invariant": "^2.2.4"
+    "invariant": "^2.2.4",
+    "walt-compiler:": "^0.5.0"
   }
 }
