--- a/packages/walt-link/package.json
+++ b/packages/walt-link/package.json
@@ -23,7 +23,7 @@
     "walt-compiler": "^0.4.3"
   },
   "peerDependencies": {
-    "walt-compiler:": "^0.4.3"
+    "walt-compiler": "^0.5.0"
   },
   "prettier": {
     "trailingComma": "es5"
