--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,11 @@ node_js:
   - "lts/*"
 install:
   - npm install
+before_script:
   - npm run postinstall
 script: "npm run $TEST_SUITE"
 after_success:
   - "npm run coverage"
-after_failure:
-  - "cat /home/travis/.npm/_logs/2018-05-05T19_22_09_250Z-debug.log"
 env:
   - TEST_SUITE=validate
   - TEST_SUITE=test
