--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "postinstall": "lerna bootstrap --stream --hoist walt-compiler",
     "validate": "lerna run validate --stream",
     "test": "lerna run test --stream",
-    "coverage": "lerna run coverage --stream",
-    "lerna": "lerna"
+    "coverage": "lerna run coverage --stream"
   },
   "repository": {
     "type": "git",
@@ -30,9 +29,6 @@
   },
   "homepage": "https://github.com/ballercat/walt#readme",
   "devDependencies": {
-    "lerna": "^2.5.1"
-  },
-  "dependencies": {
     "lerna": "^2.5.1"
   },
   "nyc": {
