--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Walt packages",
   "main": "index.js",
   "scripts": {
-    "postinstall": "lerna bootstrap --stream --hoist walt-compiler",
+    "postinstall": "lerna bootstrap --hoist",
     "validate": "lerna run validate --stream",
     "test": "lerna run test --stream",
-    "coverage": "lerna run coverage --stream"
+    "coverage": "lerna run coverage --stream",
+    "clean": "lerna clean"
   },
   "repository": {
     "type": "git",
@@ -29,7 +30,7 @@
   },
   "homepage": "https://github.com/ballercat/walt#readme",
   "devDependencies": {
-    "lerna": "^2.5.1"
+    "lerna": "^2.11.0"
   },
   "nyc": {
     "cache": true
